[general]
short_name = EdgeGallery
update = true
min_update_delay = 60
debug = false
logs_dir = /home/bitergia/logs
aliases_file = /home/bitergia/conf/aliases.json

[projects]
projects_file = /home/bitergia/conf/projects.json

[es_collection]
url = http://elasticsearch:9200

[es_enrichment]
url = http://elasticsearch:9200
autorefresh = true

[sortinghat]
host = mariadb
user = root
password =
database = demo_sh
load_orgs = true
orgs_file = /home/bitergia/conf/organizations.json
autoprofile = [github, pipermail, git]
matching = [email]
sleep_for = 100
unaffiliated_group = Unknown
affiliate = true
strict_mapping = false
reset_on_load = false
identities_file = [/home/bitergia/conf/identities.yml]
identities_format = grimoirelab

[panels]
kibiter_time_from = now-5y
kibiter_default_index = git
kibiter_url = http://kibiter:5601
kibiter_version = 6.1.4-1
#gitlab-issues = true
#gitlab-merges = true

[phases]
collection = true
identities = true
enrichment = true
panels = true

[git]
raw_index = git_raw
enriched_index = git_enriched
latest-items = true
studies = [enrich_demography:git, enrich_git_branches:git, enrich_areas_of_code:git, enrich_onion:git]

[enrich_demography:git]

[enrich_git_branches:git] 

[enrich_areas_of_code:git]
in_index = git_demo_raw
out_index = git-aoc_demo_enriched

[enrich_onion:git]
in_index = git-aoc_demo_enriched
out_index = git-onion_demo_enriched
contribs_field = hash

[github]
api-token = XXXXXXXXXXXXXXXXXXXXXXXXX
raw_index = github_demo_raw
sleep-for-rate = true
sleep-time = "300"
enriched_index = github_demo_enriched

[confluence]
raw_index = confluence_raw
enriched_index = confluence_enriched
no-archive = true

[dockerhub]
raw_index = dockerhub_raw
enriched_index = dockerhub_enriched
no-archive = true

[jenkins]
raw_index = jenkins_raw
enriched_index = jenkins_enriched
no-archive = true
